--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>CRYPTO LOCKED</h1>
+								<h1>DIMENSION AJC DANIEL</h1>
 								<p><!--[-->Il faut payer la rançon a ladresse suivante <a href="https://html5up.net">TOTOParadise</a> Chez meme<!--]--><br />
 								<!--[-->cordialement <a href="https://html5up.net/license">A hacker</a> lel.<!--]--></p>
 							</div>
